// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-panel default 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel highlighted="true" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border m--is-highlighted"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel shadow="true" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-shadow m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/$slots example $slots reactivity 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>

  <button
    class="m-button mu-mt m--is-skin-primary"
    type="button"
  >
    <!---->

    <!---->

    <span
      class="m-button__text"
    >
      Toogle $slot.header
      <!---->
    </span>

    <!---->

    <!---->
  </button>

  <button
    class="m-button mu-mt m--is-skin-primary"
    type="button"
  >
    <!---->

    <!---->

    <span
      class="m-button__text"
    >
      Toogle $slot.default
      <!---->
    </span>

    <!---->

    <!---->
  </button>

  <button
    class="m-button mu-mt m--is-skin-primary"
    type="button"
  >
    <!---->

    <!---->

    <span
      class="m-button__text"
    >
      Toogle $slot.footer
      <!---->
    </span>

    <!---->

    <!---->
  </button>
</div>
`;

exports[`Storyshots modul-components|m-panel/border border="false" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/border border-large="true" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border m--has-border-large"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/padding padding="false" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border"
  >
    <header
      class="m-panel__header m--no-padding"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--no-padding"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer m--no-padding"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/padding padding-body="false" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--no-padding"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/padding padding-footer="false" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer m--no-padding"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/padding padding-header="false" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border"
  >
    <header
      class="m-panel__header m--no-padding"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/padding padding-large="true" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border m--has-padding-large"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/skin skin="dark" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-dark m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/skin skin="darker" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-darker m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-panel/skin skin="light" 1`] = `
<div
  class="mu-p-md"
>
  <article
    class="m-panel m--is-skin-light m--has-border"
  >
    <header
      class="m-panel__header"
    >
      <div
        class="m-panel__header__content"
      >
        <h2>
          I am a header
        </h2>
      </div>

      <!---->

      <!---->
    </header>

    <div
      class="m-panel__body m--has-padding-bottom"
    >

      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit.Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur.
      </p>

    </div>

    <footer
      class="m-panel__footer"
    >
      <p>
        I am footer
      </p>
    </footer>
  </article>
</div>
`;
